@@ -1,5 +1,12 @@
 2007-11-22  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* tif_dirwrite.c: Try to avoid writing out a full readbuffer of tile
+	data when writing the directory just because we have BEENWRITING at
+	some point in the past.  This was causing odd junk to be written out
+	in a tile of data when a single tile had an interleaving of reading 
+	and writing with reading last.  (highlighted by gdal 
+	autotest/gcore/tif_write.py test 7. 
+
 	* tif_predict.c: use working buffer in PredictorEncodeTile to avoid
 	modifying callers buffer. 
 	http://trac.osgeo.org/gdal/ticket/1965
